Make sure area51 always has a scrollbar

--- a/area51.css
+++ b/area51.css
@@ -1,3 +1,7 @@
+html {
+	height:101%;
+}
+
 body {
 	color:#484848;
 	font-family:Verdana,sans-serif;
